--- a/spec/importers/screening_list/el/results.yaml
+++ b/spec/importers/screening_list/el/results.yaml
@@ -28,12 +28,12 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Fazal Rahim Farid
   :name_rev: Farid Rahim Fazal
-  :name_trim: FazalRahimFarid
-  :name_trim_rev: FaridRahimFazal
+  :name_no_ws: FazalRahimFarid
+  :name_no_ws_rev: FaridRahimFazal
   :alt_idx: [Fazel Rahim Farid, Farid, Engineer Idris]
   :alt_rev: [Farid Rahim Fazel, Farid, Idris Engineer]
-  :alt_trim: [FazelRahimFarid, Farid, EngineerIdris]
-  :alt_trim_rev: [FaridRahimFazel, Farid, IdrisEngineer]
+  :alt_no_ws: [FazelRahimFarid, Farid, EngineerIdris]
+  :alt_no_ws_rev: [FaridRahimFazel, Farid, IdrisEngineer]
 - :name: Fazel Khalil Construction Company
   :federal_register_notice: 77 FR 25055
   :start_date: '2012-04-27'
@@ -55,11 +55,11 @@
   :name_idx: Fazel Khalil Construction
   :name_with_common: Fazel Khalil Construction Company
   :name_rev_with_common: Company Construction Khalil Fazel
-  :name_trim_with_common: FazelKhalilConstructionCompany
-  :name_trim_rev_with_common: CompanyConstructionKhalilFazel
+  :name_no_ws_with_common: FazelKhalilConstructionCompany
+  :name_no_ws_rev_with_common: CompanyConstructionKhalilFazel
   :name_rev: Construction Khalil Fazel
-  :name_trim: FazelKhalilConstruction
-  :name_trim_rev: ConstructionKhalilFazel
+  :name_no_ws: FazelKhalilConstruction
+  :name_no_ws_rev: ConstructionKhalilFazel
 - :name: Zurmat Construction Company offices
   :federal_register_notice: 77 FR 25055
   :start_date: '2012-04-27'
@@ -111,11 +111,11 @@
   :name_idx: Zurmat Construction offices
   :name_with_common: Zurmat Construction Company offices
   :name_rev_with_common: offices Company Construction Zurmat
-  :name_trim_with_common: ZurmatConstructionCompanyoffices
-  :name_trim_rev_with_common: officesCompanyConstructionZurmat
+  :name_no_ws_with_common: ZurmatConstructionCompanyoffices
+  :name_no_ws_rev_with_common: officesCompanyConstructionZurmat
   :name_rev: offices Construction Zurmat
-  :name_trim: ZurmatConstructionoffices
-  :name_trim_rev: officesConstructionZurmat
+  :name_no_ws: ZurmatConstructionoffices
+  :name_no_ws_rev: officesConstructionZurmat
 - :name: Murat Peker
   :federal_register_notice: '78 FR 75485 '
   :start_date: '2013-12-12'
@@ -135,8 +135,8 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Murat Peker
   :name_rev: Peker Murat
-  :name_trim: MuratPeker
-  :name_trim_rev: PekerMurat
+  :name_no_ws: MuratPeker
+  :name_no_ws_rev: PekerMurat
 - :name: Qazi Abdallah
   :federal_register_notice: 76 FR 71867
   :start_date: '2011-11-21'
@@ -157,12 +157,12 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Qazi Abdallah
   :name_rev: Abdallah Qazi
-  :name_trim: QaziAbdallah
-  :name_trim_rev: AbdallahQazi
+  :name_no_ws: QaziAbdallah
+  :name_no_ws_rev: AbdallahQazi
   :alt_idx: [Jawid Said Jan AbdalSalam]
   :alt_rev: [AbdalSalam Jan Said Jawid]
-  :alt_trim: [JawidSaidJanAbdalSalam]
-  :alt_trim_rev: [AbdalSalamJanSaidJawid]
+  :alt_no_ws: [JawidSaidJanAbdalSalam]
+  :alt_no_ws_rev: [AbdalSalamJanSaidJawid]
 - :name: Qazi Abdallah
   :federal_register_notice: 76 FR 10001
   :start_date: '2011-11-21'
@@ -183,12 +183,12 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Qazi Abdallah
   :name_rev: Abdallah Qazi
-  :name_trim: QaziAbdallah
-  :name_trim_rev: AbdallahQazi
+  :name_no_ws: QaziAbdallah
+  :name_no_ws_rev: AbdallahQazi
   :alt_idx: [Jawid Said Jan AbdalSalam]
   :alt_rev: [AbdalSalam Jan Said Jawid]
-  :alt_trim: [JawidSaidJanAbdalSalam]
-  :alt_trim_rev: [AbdalSalamJanSaidJawid]
+  :alt_no_ws: [JawidSaidJanAbdalSalam]
+  :alt_no_ws_rev: [AbdalSalamJanSaidJawid]
 - :name: Qazi Abdallah
   :federal_register_notice: 76 FR 71867
   :start_date: '2011-11-22'
@@ -209,9 +209,9 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Qazi Abdallah
   :name_rev: Abdallah Qazi
-  :name_trim: QaziAbdallah
-  :name_trim_rev: AbdallahQazi
+  :name_no_ws: QaziAbdallah
+  :name_no_ws_rev: AbdallahQazi
   :alt_idx: [Jawid Said Jan AbdalSalam]
   :alt_rev: [AbdalSalam Jan Said Jawid]
-  :alt_trim: [JawidSaidJanAbdalSalam]
-  :alt_trim_rev: [AbdalSalamJanSaidJawid]
+  :alt_no_ws: [JawidSaidJanAbdalSalam]
+  :alt_no_ws_rev: [AbdalSalamJanSaidJawid]
