--- a/spec/importers/screening_list/fse/results.yaml
+++ b/spec/importers/screening_list/fse/results.yaml
@@ -46,19 +46,19 @@
   :name_idx: FERLAND
   :name_with_common: FERLAND COMPANY LIMITED
   :name_rev_with_common: LIMITED COMPANY FERLAND
-  :name_trim_with_common: FERLANDCOMPANYLIMITED
-  :name_trim_rev_with_common: LIMITEDCOMPANYFERLAND
+  :name_no_ws_with_common: FERLANDCOMPANYLIMITED
+  :name_no_ws_rev_with_common: LIMITEDCOMPANYFERLAND
   :name_rev: FERLAND
-  :name_trim: FERLAND
-  :name_trim_rev: FERLAND
+  :name_no_ws: FERLAND
+  :name_no_ws_rev: FERLAND
   :alt_idx: [FERLAND]
   :alt_with_common: [FERLAND CO LTD]
   :alt_rev_with_common: [LTD CO FERLAND]
-  :alt_trim_with_common: [FERLANDCOLTD]
-  :alt_trim_rev_with_common: [LTDCOFERLAND]
+  :alt_no_ws_with_common: [FERLANDCOLTD]
+  :alt_no_ws_rev_with_common: [LTDCOFERLAND]
   :alt_rev: [FERLAND]
-  :alt_trim: [FERLAND]
-  :alt_trim_rev: [FERLAND]
+  :alt_no_ws: [FERLAND]
+  :alt_no_ws_rev: [FERLAND]
 - :entity_number: '16422'
   :title: General Manager of Ferland Company Limited
   :call_sign: 
@@ -104,12 +104,12 @@
     :type: Executive Order 13645 Determination -
   :name_idx: SOKOLENKO Vitaly
   :name_rev: Vitaly SOKOLENKO
-  :name_trim: SOKOLENKOVitaly
-  :name_trim_rev: VitalySOKOLENKO
+  :name_no_ws: SOKOLENKOVitaly
+  :name_no_ws_rev: VitalySOKOLENKO
   :alt_idx: [SOKOLENKO Vitalii, SOKOLENKO Vitaliy]
   :alt_rev: [Vitalii SOKOLENKO, Vitaliy SOKOLENKO]
-  :alt_trim: [SOKOLENKOVitalii, SOKOLENKOVitaliy]
-  :alt_trim_rev: [VitaliiSOKOLENKO, VitaliySOKOLENKO]
+  :alt_no_ws: [SOKOLENKOVitalii, SOKOLENKOVitaliy]
+  :alt_no_ws_rev: [VitaliiSOKOLENKO, VitaliySOKOLENKO]
 - :entity_number: '16531'
   :title: 
   :call_sign: 
@@ -148,9 +148,9 @@
     :type: Passport
   :name_idx: HOSSEINPOUR Houshang
   :name_rev: Houshang HOSSEINPOUR
-  :name_trim: HOSSEINPOURHoushang
-  :name_trim_rev: HoushangHOSSEINPOUR
+  :name_no_ws: HOSSEINPOURHoushang
+  :name_no_ws_rev: HoushangHOSSEINPOUR
   :alt_idx: [HOSSEINPOUR Houshang Shahali, HOSEINPUR Houshang]
   :alt_rev: [Shahali Houshang HOSSEINPOUR, Houshang HOSEINPUR]
-  :alt_trim: [HOSSEINPOURHoushangShahali, HOSEINPURHoushang]
-  :alt_trim_rev: [ShahaliHoushangHOSSEINPOUR, HoushangHOSEINPUR]
+  :alt_no_ws: [HOSSEINPOURHoushangShahali, HOSEINPURHoushang]
+  :alt_no_ws_rev: [ShahaliHoushangHOSSEINPOUR, HoushangHOSEINPUR]
