--- a/spec/importers/screening_list/sdn/results.yaml
+++ b/spec/importers/screening_list/sdn/results.yaml
@@ -49,12 +49,12 @@
   :ids: []
   :name_idx: BANCO NACIONAL DE CUBA
   :name_rev: CUBA DE NACIONAL BANCO
-  :name_trim: BANCONACIONALDECUBA
-  :name_trim_rev: CUBADENACIONALBANCO
+  :name_no_ws: BANCONACIONALDECUBA
+  :name_no_ws_rev: CUBADENACIONALBANCO
   :alt_idx: [BNC, NATIONAL BANK OF CUBA]
   :alt_rev: [BNC, CUBA OF BANK NATIONAL]
-  :alt_trim: [BNC, NATIONALBANKOFCUBA]
-  :alt_trim_rev: [BNC, CUBAOFBANKNATIONAL]
+  :alt_no_ws: [BNC, NATIONALBANKOFCUBA]
+  :alt_no_ws_rev: [BNC, CUBAOFBANKNATIONAL]
 - :entity_number: '6982'
   :title: 
   :call_sign: 
@@ -115,8 +115,8 @@
     :type: Passport
   :name_idx: JIMALE Ahmed Nur Ali
   :name_rev: Ali Nur Ahmed JIMALE
-  :name_trim: JIMALEAhmedNurAli
-  :name_trim_rev: AliNurAhmedJIMALE
+  :name_no_ws: JIMALEAhmedNurAli
+  :name_no_ws_rev: AliNurAhmedJIMALE
   :alt_idx:
   - JUMALI Ahmed Ali
   - JIMALE Ahmad Ali
@@ -135,7 +135,7 @@
   - Nur Ahmed Shaykh JIMALE
   - Ahmed Sheikh JIMALE
   - Ali Ahmed JUMALE
-  :alt_trim:
+  :alt_no_ws:
   - JUMALIAhmedAli
   - JIMALEAhmadAli
   - JIMALEAhmadNurAli
@@ -144,7 +144,7 @@
   - JIMALEShaykhAhmedNur
   - JIMALESheikhAhmed
   - JUMALEAhmedAli
-  :alt_trim_rev:
+  :alt_no_ws_rev:
   - AliAhmedJUMALI
   - AliAhmadJIMALE
   - AliNurAhmadJIMALE
@@ -187,12 +187,12 @@
     :type: Vessel Registration Identification
   :name_idx: PARSHAN
   :name_rev: PARSHAN
-  :name_trim: PARSHAN
-  :name_trim_rev: PARSHAN
+  :name_no_ws: PARSHAN
+  :name_no_ws_rev: PARSHAN
   :alt_idx: [IRAN BRIGHTNESS, BRIGHTNESS, MARIGOLD]
   :alt_rev: [BRIGHTNESS IRAN, BRIGHTNESS, MARIGOLD]
-  :alt_trim: [IRANBRIGHTNESS, BRIGHTNESS, MARIGOLD]
-  :alt_trim_rev: [BRIGHTNESSIRAN, BRIGHTNESS, MARIGOLD]
+  :alt_no_ws: [IRANBRIGHTNESS, BRIGHTNESS, MARIGOLD]
+  :alt_no_ws_rev: [BRIGHTNESSIRAN, BRIGHTNESS, MARIGOLD]
 - :entity_number: '521'
   :title: Executive Director, Havana International Bank
   :call_sign: 
@@ -231,5 +231,5 @@
     :type: Passport
   :name_idx: CHAO Lazaro R
   :name_rev: R Lazaro CHAO
-  :name_trim: CHAOLazaroR
-  :name_trim_rev: RLazaroCHAO
+  :name_no_ws: CHAOLazaroR
+  :name_no_ws_rev: RLazaroCHAO
