--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-bundler_args: --without development production
+bundler_args: --without development staging production
 language: ruby
 rvm:
   - 2.1.0
