--- a/spec/importers/environmental_toolkit/environmental_solution/environmental_solution_articles.yaml
+++ b/spec/importers/environmental_toolkit/environmental_solution/environmental_solution_articles.yaml
@@ -7,7 +7,8 @@
   :name_english: Mercury - Electrostatic Precipitators
   :name_chinese: 汞-静电除尘器
   :source_id: 201
-  :id: 5f70d064b05b38fad8b9c0f80ede43f0c7641780
+  :source: EnvironmentalSolution
+  :id: 6d7e8bd0e58f773bd90649ab4281831ca6fb9b9a
 - :source_created_at: '2013-11-06'
   :source_updated_at: '2013-11-06'
   :name_spanish: 'Tecnologías Asociadas para el Sistema Nacional de Eliminación de Descargas Contaminantes: Estándares de Tratamiento de Aguas Residuales Secundarios o Avanzados'
@@ -16,4 +17,5 @@
   :name_english: 'Related Technologies for NPDES: Secondary or Advanced Wastewater Treatment Standards'
   :name_chinese: NPDES相关技术：二级或高级污水处理标准
   :source_id: 200
-  :id: f0bc4a0b05036972460281cfe8fc6371a127f390
+  :source: EnvironmentalSolution
+  :id: 07cb688c619da4eedc61251a4ada2bfa92d80c82
