--- a/spec/importers/screening_list/el/results.yaml
+++ b/spec/importers/screening_list/el/results.yaml
@@ -6,6 +6,7 @@
   :license_requirement: For all items subject to the EAR. (See Â§744.11 of the EAR).
   :license_policy: Presumption of denial.
   :source_list_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
+  :title: []
   :id: fabe2145af20dcff1163dbf2a6292f379aa9f27f
   :alt_names:
   - Fazel Rahim Farid
@@ -41,6 +42,7 @@
   :license_requirement: For all items subject to the EAR. (See Â§744.11 of the EAR).
   :license_policy: Presumption of denial.
   :source_list_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
+  :title: []
   :id: 82637ba282f441104f3aa8413aefdd5c303b9fe6
   :alt_names: []
   :addresses:
@@ -67,6 +69,7 @@
   :license_requirement: For all items subject to the EAR. (See Â§744.11 of the EAR).
   :license_policy: Presumption of denial.
   :source_list_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
+  :title: []
   :id: 0a10ca0bd89967d7a80efc9f4ffecaa71af1ee79
   :alt_names: []
   :addresses:
@@ -123,6 +126,7 @@
   :license_requirement: For all items subject to the EAR. (See Â§744.11 of the EAR).
   :license_policy: Presumption of denial.
   :source_list_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
+  :title: []
   :id: 946f840d05372d41c4baeebc61dddf1363929de5
   :alt_names: []
   :addresses:
@@ -144,6 +148,7 @@
   :license_requirement: For all items subject to the EAR. (See Â§744.11 of the EAR).
   :license_policy: Presumption of denial.
   :source_list_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
+  :title: []
   :id: d741e2b6c40aa24508bd53f45fd0b7e76d7a657c
   :alt_names:
   - Jawid, Said Jan Abd-al-Salam
@@ -170,6 +175,7 @@
   :license_requirement: For all items subject to the EAR. (See Â§744.11 of the EAR).
   :license_policy: Presumption of denial.
   :source_list_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
+  :title: []
   :id: 6ee67838b242db8f5ec639678c518b8636c57c23
   :alt_names:
   - Jawid, Said Jan Abd-al-Salam
@@ -196,6 +202,7 @@
   :license_requirement: For all items subject to the EAR. (See Â§744.11 of the EAR).
   :license_policy: Presumption of denial.
   :source_list_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
+  :title: []
   :id: c04d65011854dc1a2b7ce94a1af2b41ca58d6760
   :alt_names:
   - Jawid, Said Jan Abd-al-Salam
