Transliterate description field

--- a/spec/importers/trade_event/ita/results.yaml
+++ b/spec/importers/trade_event/ita/results.yaml
@@ -106,7 +106,7 @@
     :venue: Morial Convention Center, New Orleans, Louisiana
   :source: ITA
 - :cost: 0.0
-  :description: HOSPITALAR taking place in São Paulo, Brazil is in its 21st year and
+  :description: HOSPITALAR taking place in Sao Paulo, Brazil is in its 21st year and
     is an International Trade Fair for Products, Equipment, Services and Technology
     for Hospitals, Health Clinics and Laboratories. HOSPITALAR is the most complete
     and specialized healthcare fair in Brazil and Latin America. The fair is to be
@@ -117,8 +117,8 @@
     clients. Exclusively dedicated to healthcare professionals, HOSPITALAR 2020 received
     92,000 visitors among doctors, nurses, PTs, administrators, distributors and other
     professionals interested in the health care area, coming from all over Brazil
-    and Latin America. Messe Düsseldorf North America, the subsidiary office of Messe
-    Düsseldorf in Germany - organizer of the renowned MEDICA trade fair, is the exclusive
+    and Latin America. Messe Dusseldorf North America, the subsidiary office of Messe
+    Dusseldorf in Germany - organizer of the renowned MEDICA trade fair, is the exclusive
     representative office of HOSPITALAR in the United States and Canada, and also
     organizes the North American Pavilion at the show every year. This pavilion provides
     an excellent platform to introduce your company's products and services to the
