--- a/spec/importers/envirotech/regulation/regulation_articles.yaml
+++ b/spec/importers/envirotech/regulation/regulation_articles.yaml
@@ -10,7 +10,7 @@
   :source_id: 21
   :source_updated_at: '2013-11-13'
   :url: 'http://www.gpo.gov/fdsys/pkg/CFR-2011-title40-vol6/xml/CFR-2011-title40-vol6-part60.xml'
-  :issue_id:
+  :issue_ids:
     - 23
 - :id: 1a2ce2690a1a8ca3bb64cd7f022899f4dc95d1de
   :name_chinese: '新固定污染源性能标准：垃圾填埋场和城市垃圾'
@@ -23,5 +23,5 @@
   :source_id: 19
   :source_updated_at: '2013-12-09'
   :url: 'http://www.gpo.gov/fdsys/pkg/CFR-2011-title40-vol6/xml/CFR-2011-title40-vol6-part60.xml'
-  :issue_id:
+  :issue_ids:
     - 24
