--- a/spec/importers/envirotech/solution/solution_articles.yaml
+++ b/spec/importers/envirotech/solution/solution_articles.yaml
@@ -9,7 +9,7 @@
   :source_id: 201
   :source: SOLUTIONS
   :id: cc33053f8625a53edbcbdd66e10f0da01fcbd107
-  :issue_id:
+  :issue_ids:
     - 23
 - :source_created_at: '2013-11-06'
   :source_updated_at: '2013-11-06'
@@ -21,5 +21,5 @@
   :source_id: 200
   :source: SOLUTIONS
   :id: 351fb81a7a23ccb01c9b1f16005a1b9432f47bde
-  :issue_id:
+  :issue_ids:
     - 24
