--- a/spec/importers/market_research/expected_indexed_data.yaml
+++ b/spec/importers/market_research/expected_indexed_data.yaml
@@ -8,10 +8,9 @@
     but also, to attract Brazilian tourists to U.S destinations with major rodeos
     and related events.
   :expiration_date: '2018-01-01'
-  :industries:
-    :original:
-    - Services
-    :mapped: []
+  :tags_original_source:
+  - Services
+  :ita_industries: []
   :report_type: Market Research Report
   :title: Brazilian Rodeo Industry and Potential for U.S. Companies and U.S. Travel
     and Tourism Destinations to Engage
@@ -40,9 +39,8 @@
     government tenders. This report covers advance and ongoing procurement, as well
     as recruitment of consultants for projects that are funded by the ADB.
   :expiration_date: '2014-11-26'
-  :industries:
-    :original: []
-    :mapped: []
+  :tags_original_source: []
+  :ita_industries: []
   :report_type: Market Research Report
   :title: ADVANCE Procurement Notices, October 2013
   :url: http://mr.export.gov/docs/x_9944661.pdf
@@ -56,10 +54,9 @@
     Information Technology Systems (ITS) for the new Passenger Terminal Building at
     JKIA, Nairobi.
   :expiration_date: '2013-12-31'
-  :industries:
-    :original:
-    - Aerospace & Defense
-    :mapped: []
+  :tags_original_source:
+  - Aerospace & Defense
+  :ita_industries: []
   :report_type: Market Research Report
   :title: 'Kenya: Renovation and Expansion of Passenger Terminal Facilities at Jomo
     Kenyatta International Airport - Information Technology Systems'
@@ -77,32 +74,29 @@
     before shipping any goods as conditions and restrictions can change suddenly.
     Please see the contact information at the end of this report.
   :expiration_date: '2014-12-30'
-  :industries:
-    :original:
-    - Aerospace & Defense
-    - Agribusiness
-    - Apparel & Textiles
-    - Automotive & Ground Transportation
-    - Chemicals, Petrochemicals & Composites
-    - Construction, Building & Heavy Equipment
-    - Consumer Goods & Home Furnishings
-    - Energy & Mining
-    - Environmental Technologies
-    - Food Processing & Packaging
-    - Health Technologies
-    - Industrial Equipment & Supplies
-    - Information & Communication
-    - Marine Industries
-    - Paper, Printing, Graphic Arts
-    - Security & Safety
-    - Services
-    - Used & Reconditioned Equipment
-    :mapped:
-    - 
-      - Chemicals
-      - Agribusiness
-    -
-      - Environmental Industries
+  :tags_original_source:
+  - Aerospace & Defense
+  - Agribusiness
+  - Apparel & Textiles
+  - Automotive & Ground Transportation
+  - Chemicals, Petrochemicals & Composites
+  - Construction, Building & Heavy Equipment
+  - Consumer Goods & Home Furnishings
+  - Energy & Mining
+  - Environmental Technologies
+  - Food Processing & Packaging
+  - Health Technologies
+  - Industrial Equipment & Supplies
+  - Information & Communication
+  - Marine Industries
+  - Paper, Printing, Graphic Arts
+  - Security & Safety
+  - Services
+  - Used & Reconditioned Equipment
+  :ita_industries:
+  - Chemicals
+  - Agribusiness
+  - Environmental Industries
   :report_type: Market Research Report
   :title: Process Obstacles to Exporting to Argentina
   :url: http://mr.export.gov/docs/x_4268342.pdf
@@ -114,10 +108,9 @@
     role & policies for the civil aviation industry, current market size, trends,
     business opportunities and the prevailing challenges in the Indian aviation market.
   :expiration_date: '2015-03-31'
-  :industries:
-    :original:
-    - Aerospace & Defense
-    :mapped: []
+  :tags_original_source:
+   - Aerospace & Defense
+  :ita_industries: []
   :report_type: Best Market Research
   :title: Commercial Aviation in India
   :url: http://mr.export.gov/docs/x_813718.pdf
@@ -127,9 +120,8 @@
   :description: Bosnia and Herzogovina Country Commercial Guide is a primer on doing
     business in the country.
   :expiration_date: '2016-01-01'
-  :industries:
-    :original: []
-    :mapped: []
+  :tags_original_source: []
+  :ita_industries: []
   :report_type: Country Commercial Guide
   :title: Bosnia and Herzogovina Country Commercial Guide
   :url: http://mr.export.gov/docs/x_3092299.pdf
