--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 bundler_args: --without development staging production
 language: ruby
-rvm:
-  - 2.1.0
-before_install:
-  - wget https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.2.1.deb && sudo dpkg -i --force-confnew elasticsearch-1.2.1.deb && true
-  - sudo service elasticsearch start
+sudo: false
+services:
+  - elasticsearch
 
 addons:
  code_climate:
