--- a/spec/importers/market_research/expected_indexed_data.yaml
+++ b/spec/importers/market_research/expected_indexed_data.yaml
@@ -8,7 +8,7 @@
     but also, to attract Brazilian tourists to U.S destinations with major rodeos
     and related events.
   :expiration_date: '2018-01-01'
-  :tags_original_source:
+  :industries:
   - Services
   :ita_industries: []
   :report_type: Market Research Report
@@ -39,7 +39,7 @@
     government tenders. This report covers advance and ongoing procurement, as well
     as recruitment of consultants for projects that are funded by the ADB.
   :expiration_date: '2014-11-26'
-  :tags_original_source: []
+  :industries: []
   :ita_industries: []
   :report_type: Market Research Report
   :title: ADVANCE Procurement Notices, October 2013
@@ -54,7 +54,7 @@
     Information Technology Systems (ITS) for the new Passenger Terminal Building at
     JKIA, Nairobi.
   :expiration_date: '2013-12-31'
-  :tags_original_source:
+  :industries:
   - Aerospace & Defense
   :ita_industries: []
   :report_type: Market Research Report
@@ -74,7 +74,7 @@
     before shipping any goods as conditions and restrictions can change suddenly.
     Please see the contact information at the end of this report.
   :expiration_date: '2014-12-30'
-  :tags_original_source:
+  :industries:
   - Aerospace & Defense
   - Agribusiness
   - Apparel & Textiles
@@ -108,7 +108,7 @@
     role & policies for the civil aviation industry, current market size, trends,
     business opportunities and the prevailing challenges in the Indian aviation market.
   :expiration_date: '2015-03-31'
-  :tags_original_source:
+  :industries:
    - Aerospace & Defense
   :ita_industries: []
   :report_type: Best Market Research
@@ -120,7 +120,7 @@
   :description: Bosnia and Herzogovina Country Commercial Guide is a primer on doing
     business in the country.
   :expiration_date: '2016-01-01'
-  :tags_original_source: []
+  :industries: []
   :ita_industries: []
   :report_type: Country Commercial Guide
   :title: Bosnia and Herzogovina Country Commercial Guide
