Use "U.S. Department of State" and "STATE" as the sources for country fact sheets.

--- a/spec/api/v2/country_fact_sheets/results.yaml
+++ b/spec/api/v2/country_fact_sheets/results.yaml
@@ -9,7 +9,9 @@
   :country:
   - AF
   - US
-  :source: []
+  :source:
+  - U.S. Department of State
+  - STATE
   :topic:
   - Foreign Relations
 - :id: '3235'
@@ -22,6 +24,8 @@
   :country:
   - AL
   - US
-  :source: []
+  :source:
+  - U.S. Department of State
+  - STATE
   :topic:
   - Foreign Relations
