--- a/spec/importers/country_fact_sheet/country_fact_sheets.yaml
+++ b/spec/importers/country_fact_sheet/country_fact_sheets.yaml
@@ -8,7 +8,9 @@
   :published_date: '2014-10-31'
   :topic:
   - Foreign Relations
-  :source: []
+  :source:
+  - U.S. Department of State
+  - STATE
   :country:
   - AF
   - US
@@ -21,7 +23,9 @@
   :published_date: '2015-03-11'
   :topic:
   - Foreign Relations
-  :source: []
+  :source:
+  - U.S. Department of State
+  - STATE
   :country:
   - AL
   - US
