--- a/spec/importers/country_fact_sheet/country_fact_sheets.yaml
+++ b/spec/importers/country_fact_sheet/country_fact_sheets.yaml
@@ -8,9 +8,7 @@
   :published_date: '2014-10-31'
   :topic:
   - Foreign Relations
-  :source:
-  - U.S. Department of State
-  - STATE
+  :source: STATE
   :country:
   - AF
   - US
@@ -23,9 +21,7 @@
   :published_date: '2015-03-11'
   :topic:
   - Foreign Relations
-  :source:
-  - U.S. Department of State
-  - STATE
+  :source: STATE
   :country:
   - AL
   - US
