--- a/spec/importers/envirotech/provider_solution/provider_solution_articles.yaml
+++ b/spec/importers/envirotech/provider_solution/provider_solution_articles.yaml
@@ -1,13 +1,17 @@
 ---
 - :id: 743
+  :solution_name: "Mercury - Electrostatic Precipitators"
+  :provider_name: "Epcon Industrial Systems, LP"
   :source: PROVIDER_SOLUTIONS
   :source_id: 743
-  :provider_id: 951
-  :solution_id: 196
+  :provider_id: 984
+  :solution_id: 201
   :url: 'http://abcov.com/'
 - :id: 422
+  :solution_name: "Related Technologies for NPDES: Secondary or Advanced Wastewater Treatment Standards"
+  :provider_name: "Air Cycle Corporation"
   :source: PROVIDER_SOLUTIONS
   :source_id: 422
-  :provider_id: 931
-  :solution_id: 128
+  :provider_id: 977
+  :solution_id: 200
   :url: 'http://www.ada-cs.com'
